  Info:
    - The new settings have been localized for Deutsch (German), and Français (French). 
      - The current Deutsch localization for the new settings is provided by Google Translate. If you are fluent in Deutsch it would be appreciated if you let me know if the translation is satisfactory, or to provide corrections.
---------------------------------------------------------------------------------------------------
Version: 1.4.7
Date: 21. 12. 2024
  Changes:
    - Added support for Wood Gassification Updated
      - Should Wood Gassification Updated be merged with Wood Gassification, Asphalt Roads Patched will still be able to detect the original version of the mod.
    - Made Alien Biomes a hidden optional dependency
      - Why?: Alien Biomes was added as an optional dependency only for technical reasons. Asphalt Roads does not have additional content when used with Alien Biomes, so the dependency is now hidden to avoid confusion.
    - Updated mod dependency versions
      - Mods that have not been updated yet have had their dependcy versions set to more than their last version. This does not gurantee that these mods will be compatible after they update, however.
---------------------------------------------------------------------------------------------------
Version: 1.4.6
Date: 07. 12. 2024
  Info:
    - Updated by Fr_Dae
  Changes:
    - Fr Loc
    - info improve
---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 08. 11. 2024
  Features:
    - Walking speed and Vehicle friction modifiers are now configurable.
      - The default values are the same values that were previously hardcoded.