@@ -15,7 +15,7 @@
   "?Wood_Gasification > 3.2.1", 
   "?Wood_Gasification_updated >= 1.0.1",
   "?pypetroleumhandling >= 3.0.0", 
-  "?corrundum >= 1.0.10",
+  "?corrundum >= 1.0.35",
   "(?) alien-biomes >= 0.7.0"
   ]
 }
