@@ -18,7 +18,10 @@ AR-revert-completed=__1__ __2__ in __3__ __4__ rückgewandelt
 [mod-setting-name]
 AR-use-items-from-bioindustries=Nutze Rohstoffe aus der "Bio Industries" Mod
 AR-use-items-from-woodgasification=Nutze Rohstoffe aus der "Wood Gasification" Mod
+AR-use-items-from-corrundum=Nutze Rohstoffe aus der Mod "Corrundum"
 AR-use-items-from-pypetrol=Nutze Rohstoffe aus "Pyanodons Petroleum Handling" Mod
+AR-use-stone=Benötigt werden Steinziegel.
+AR-use-crude-oil=Erfordert Rohöl
 AR-research-cost=Forschungskosten
 AR-require-adv-oil-processing=Verwenden Sie Advanced Oil Processing als Voraussetzung
 AR-item-group=Obergruppe der Asphalt-Bodentypen
@@ -36,7 +39,10 @@ AR-asphalt-friction-mod=Reibungsmodifikator für Asphaltfahrzeuge
 [mod-setting-description]
 AR-use-items-from-bioindustries=Wenn diese Option aktiviert ist, wird für die Herstellung von Asphalt Kies anstatt Steinziegeln benötigt.
 AR-use-items-from-woodgasification=Wenn diese Option aktiviert ist, wird für die Herstellung von Asphalt Teer anstatt Rohöl benötigt.
+AR-use-items-from-corrundum=[img=utility/warning_white] [font=default-semibold][color=red]Google übersetzt[/color][/font] \nIst diese Option aktiviert, wird für die Herstellung von Asphaltfliesen ein Asphaltblock anstelle von Schweröl benötigt. Die Asphalttechnologie von Corrundum wird zur Voraussetzung. Die Asphaltfliesenproduktion wird zudem von 10 auf 15-fach erhöht.
 AR-use-items-from-pypetrol=Wenn diese Option aktiviert ist, wird für die Herstellung von Asphalt Kies, Teer und Bitumen benötigt.
+AR-use-stone=[img=utility/warning_white] [font=default-semibold][color=red]Google übersetzt[/color][/font] \nWenn diese Option aktiviert ist, entfällt die Notwendigkeit, Steinziegel zur Herstellung von Asphaltfliesen zu verwenden.\nWenn Sie die Kompatibilität mit Bio Industries oder Pyanodons aktivieren, hat diese Einstellung keine Auswirkung.
+AR-use-crude-oil=[img=utility/warning_white] [font=default-semibold][color=red]Google übersetzt[/color][/font] \nWenn diese Option aktiviert ist, entfällt die Notwendigkeit von Rohöl zur Herstellung von Asphaltfliesen.\nWenn Sie die Holzvergasung oder die Pyanodons-Kompatibilität aktivieren, hat diese Einstellung keine Auswirkung.
 AR-research-cost=Diese Einstellung bestimmt die Kosten der Asphalt-Forschung.\n\nVerringert: Nur Automatisierungs- und Logistik-Wissenschaftspakete erforderlich\n\nNormal: Chemie-Wissenschaftspakete zusätzlich erforderlich\n\nTeuer: Produktions-Wissenschaftspakete zusätzlich erforderlich
 AR-require-adv-oil-processing=[img=utility/warning_white] [font=default-semibold][color=red]Google übersetzt[/color][/font] \nWenn die Forschungskosten normal oder hoch sind, erfordert diese Einstellung die Erforschung der Technologie „Erweiterte Ölverarbeitung“.
 AR-item-group=Die Produktionsrezepte sämtlicher Bodentypen werden unter der ausgewählen Obergruppe zusammengefasst. Standardmäßig ist hierfür das Logistik-Tab ausgewählt. 
