@@ -18,8 +18,12 @@ AR-revert-completed=Reconverti __1__ __2__ en __3__ __4__
 [mod-setting-name]
 AR-use-items-from-bioindustries=Utiliser les objets du mod "Bio Industries"
 AR-use-items-from-woodgasification=Utiliser les objets du mod "Gazéification du bois"
+AR-use-items-from-corrundum=Utilisez les objets du mod "Corrundum"
 AR-use-items-from-pypetrol=Utiliser les objets du mod "Gestion pétrolière Pyanodons"
+AR-use-stone=Il faut des briques de pierre
+AR-use-crude-oil=Besoin de pétrole brut
 AR-research-cost=Coût de recherche
+AR-require-adv-oil-processing=Utiliser le traitement avancé du pétrole comme prérequis
 AR-item-group=Groupe d'objets pour les dalles d'asphalte
 AR-asphalt-stack-size=Taille des piles des dalles d'asphalte
 AR-enable-basic-marking-tiles=Activer les marquages de base
@@ -35,8 +39,12 @@ AR-asphalt-friction-mod=Modificateur de friction des véhicules sur asphalte
 [mod-setting-description]
 AR-use-items-from-bioindustries=Si activé, la production de dalles d'asphalte nécessite de la pierre concassée au lieu de briques de pierre.
 AR-use-items-from-woodgasification=Si activé, la production de dalles d'asphalte nécessite du goudron au lieu du pétrole brut.
+AR-use-items-from-corrundum=[img=utility/warning_white] [font=default-semibold][color=red]Google Traduit[/color][/font] \nSi cette option est activée, la production de dalles d'asphalte nécessitera 1 bloc d'asphalte au lieu de pétrole lourd. La technologie d'asphalte de Corrundum sera alors requise. Le rendement en dalles d'asphalte sera également multiplié par 15 au lieu de 10.
 AR-use-items-from-pypetrol=Si activé, la production de dalles d'asphalte nécessite du gravier, du goudron et du bitume.
+AR-use-stone=[img=utility/warning_white] [font=default-semibold][color=red]Google Traduit[/color][/font] \nSi cette option est activée, elle supprime le besoin de briques de pierre pour produire des tuiles d'asphalte.\nSi vous activez la compatibilité avec Bio Industries ou Pyanodons, ce paramètre sera sans effet.
+AR-use-crude-oil=[img=utility/warning_white] [font=default-semibold][color=red]Google Traduit[/color][/font] \nSi cette option est activée, la production de tuiles d'asphalte ne nécessite plus de pétrole brut.\nSi vous activez la gazéification du bois ou la compatibilité avec les Pyanodons, ce paramètre sera sans effet.
 AR-research-cost=Cette option détermine le coût de la recherche sur l'asphalte.\n\nRéduit : Seuls les packs de science d'automatisation et de logistique sont nécessaires.\n\nNormal : En plus, les packs de science chimique sont requis.\n\nCoûteux : Les packs de science de production sont également nécessaires.
+AR-require-adv-oil-processing=[img=utility/warning_white] [font=default-semibold][color=red]Google Traduit[/color][/font] \nLorsque le coût de la recherche est normal ou élevé, ce paramètre exige que la technologie « Traitement avancé du pétrole » soit étudiée.
 AR-item-group=Le groupe d'objets sélectionné contient toutes les recettes liées à l'asphalte. Par défaut, les recettes apparaîtront dans l'onglet logistique.
 AR-asphalt-stack-size=La taille de pile par défaut est de 100 objets.\nValeur maximale : 1000\nValeur minimale : 10
 AR-enable-basic-marking-tiles=Si vous souhaitez utiliser l'asphalte avec des marquages de base, cochez cette case.\n\nNOTE : Si cette option est désactivée et que vous chargez une sauvegarde utilisant ces dalles, toutes ces dalles seront supprimées !\n\nSi activé, cette option occupera 8 des 255 emplacements possibles pour les dalles.
